--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -267,26 +267,26 @@
         <activity android:name="com.example.sk_android.mvp.view.activity.mysystemsetup.SystemSetupActivity"
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
-        <!-- 系统设置 开启提示音页面 -->
-        <activity android:name="com.example.sk_android.mvp.view.activity.mysystemsetup.NotificationSettingsActivity"
-                  android:theme="@style/AppTheme.ActionBar">
-        </activity>
-        <!-- 系统设置 设置打招呼语页面 -->
-        <activity android:name="com.example.sk_android.mvp.view.activity.mysystemsetup.GreetingsActivity"
-                  android:theme="@style/AppTheme.ActionBar">
-        </activity>
-        <!-- 系统设置 绑定手机号页面 -->
-        <activity android:name="com.example.sk_android.mvp.view.activity.mysystemsetup.BindPhoneNumberActivity"
-                  android:theme="@style/AppTheme.ActionBar">
-        </activity>
-        <!-- 系统设置 更换密码页面 -->
-        <activity android:name="com.example.sk_android.mvp.view.activity.mysystemsetup.UpdatePasswordActivity"
-                  android:theme="@style/AppTheme.ActionBar">
-        </activity>
-        <!-- 系统设置 关于我们页面 -->
-        <activity android:name="com.example.sk_android.mvp.view.activity.mysystemsetup.AboutUsActivity"
-                  android:theme="@style/AppTheme.ActionBar">
-        </activity>
+        <!--&lt;!&ndash; 系统设置 开启提示音页面 &ndash;&gt;-->
+        <!--<activity android:name="com.example.sk_android.mvp.view.activity.mysystemsetup.NotificationSettingsActivity"-->
+                  <!--android:theme="@style/AppTheme.ActionBar">-->
+        <!--</activity>-->
+        <!--&lt;!&ndash; 系统设置 设置打招呼语页面 &ndash;&gt;-->
+        <!--<activity android:name="com.example.sk_android.mvp.view.activity.mysystemsetup.GreetingsActivity"-->
+                  <!--android:theme="@style/AppTheme.ActionBar">-->
+        <!--</activity>-->
+        <!--&lt;!&ndash; 系统设置 绑定手机号页面 &ndash;&gt;-->
+        <!--<activity android:name="com.example.sk_android.mvp.view.activity.mysystemsetup.BindPhoneNumberActivity"-->
+                  <!--android:theme="@style/AppTheme.ActionBar">-->
+        <!--</activity>-->
+        <!--&lt;!&ndash; 系统设置 更换密码页面 &ndash;&gt;-->
+        <!--<activity android:name="com.example.sk_android.mvp.view.activity.mysystemsetup.UpdatePasswordActivity"-->
+                  <!--android:theme="@style/AppTheme.ActionBar">-->
+        <!--</activity>-->
+        <!--&lt;!&ndash; 系统设置 关于我们页面 &ndash;&gt;-->
+        <!--<activity android:name="com.example.sk_android.mvp.view.activity.mysystemsetup.AboutUsActivity"-->
+                  <!--android:theme="@style/AppTheme.ActionBar">-->
+        <!--</activity>-->
 
 
         <!--公司信息列表-->
@@ -327,6 +327,13 @@
         <!--图片放大-->
         <activity android:name="imui.jiguang.cn.imuisample.messages.BrowserImageActivity"
                   android:theme="@style/Base.Theme.AppCompat"/>
+
+        <uses-library android:name="com.google.android.maps"/>
+
+
+        <meta-data
+                android:name="com.google.android.geo.API_KEY"
+                android:value="@string/google_map_key" />
 
 
         <meta-data
