--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,7 +27,7 @@
 
 
         <activity
-                android:name="com.example.sk_android.mvp.view.activity.register.testActivity"
+                android:name="com.example.sk_android.mvp.view.activity.register.MainActivity"
                 android:label="@string/app_name"
                 android:windowSoftInputMode="adjustPan"
                 android:theme="@style/AppTheme.ActionBar">
@@ -89,10 +89,6 @@
         </activity>
         <!--城市列表-->
         <activity android:name=".mvp.view.activity.jobselect.CitySelectActivity"
-                  android:theme="@style/AppTheme.ActionBar">
-        </activity>
-
-        <activity android:name=".mvp.view.activity.register.MainActivity"
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
 
