--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,11 +23,12 @@
             android:icon="@mipmap/ic_launcher"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
-            android:theme="@style/AppTheme" tools:ignore="ExtraText,GoogleAppIndexingWarning">
+            android:theme="@style/AppTheme"
+            tools:ignore="ExtraText,GoogleAppIndexingWarning">
 
 
         <activity
-                android:name="com.example.sk_android.mvp.view.activity.register.testActivity"
+                android:name="com.example.sk_android.mvp.view.activity.register.MainActivity"
                 android:label="@string/app_name"
                 android:windowSoftInputMode="adjustPan"
                 android:theme="@style/AppTheme.ActionBar">
@@ -92,9 +93,7 @@
                   android:theme="@style/AppTheme.ActionBar">
         </activity>
 
-        <activity android:name=".mvp.view.activity.register.MainActivity"
-                  android:theme="@style/AppTheme.ActionBar">
-        </activity>
+
 
         <activity android:name=".mvp.view.activity.register.TelephoneResetPasswordActivity"
                   android:theme="@style/AppTheme.ActionBar">
