--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,11 @@
         </activity>
 
 
+        <!--聊天视频-->
+        <activity android:name="imui.jiguang.cn.imuisample.messages.JitsiMeetActivitySon"
+                  android:windowSoftInputMode="adjustPan"
+        >
+        </activity>
 
         <!--视频-->
         <activity android:name="com.example.sk_android.mvp.view.activity.company.VideoShowActivity"
