--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         <!--聊天视频-->
         <activity android:name="imui.jiguang.cn.imuisample.messages.JitsiMeetActivitySon"
                   android:windowSoftInputMode="adjustPan"
+                  android:theme="@style/AppTheme.Black"
         >
         </activity>
 
