--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    android.applicationVariants.all {
+        variant ->
+            variant.outputs.all {
+                // 此处指定生成的apk文件名
+                outputFileName = "SK.apk"
+            }
+    }
 }
 
 androidExtensions {
@@ -216,6 +223,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation 'com.google.android.gms:play-services-location:15.0.1'
+
+    //解决软键盘弹起覆盖edittext的问题
+    implementation 'im.ll:floatlayout:1.1.0'
 }
 
 //configurations.all {
