--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,12 +18,13 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <application
             android:name=".mvp.application.App"
-            android:allowBackup="true"
+            android:allowBackup="false"
             android:label="@string/app_name"
             android:icon="@mipmap/ic_launcher"
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
+            tools:replace="android:allowBackup"
             tools:ignore="ExtraText,GoogleAppIndexingWarning">
 
 
