--- a/messagelist/build.gradle
+++ b/messagelist/build.gradle
@@ -1,4 +1,6 @@
 apply plugin: 'com.android.library'
+apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-android'
 
 ext {
     PUBLISH_GROUP_ID = 'cn.jiguang.imui'
@@ -32,6 +34,10 @@ dependencies {
     implementation 'com.android.support:support-v4:28.0.0'
     testImplementation 'junit:junit:4.12'
     implementation project(path: ':chatinput')
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
 
 apply from: 'android-release-aar.gradle'
+repositories {
+    mavenCentral()
+}
