--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,6 +52,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.2.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-rx2:1.2.1'
+
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -207,6 +208,7 @@ dependencies {
 
     // 文件选择器
     implementation 'com.leon:lfilepickerlibrary:1.7.0'
+
     //友盟分享
     implementation files('libs/SecurityEnvSDK-release-1.1.0.jar')
     implementation files('libs/umeng-share-core-6.9.6.jar')
@@ -215,6 +217,7 @@ dependencies {
     implementation files('libs/umeng-share-twitter-6.9.6.jar')
     implementation files('libs/umeng-shareboard-widget-6.9.6.jar')
     implementation files('libs/umeng-sharetool-6.9.6.jar')
+
     //twitter
     implementation 'com.twitter.sdk.android:twitter-core:3.1.1'
     implementation 'com.twitter.sdk.android:tweet-composer:3.1.1'
@@ -226,7 +229,7 @@ dependencies {
 
     //国家区号选择器
     implementation project(':library')
-
+    implementation files('libs/libphonenumber-8.9.7.jar')
 }
 
 //configurations.all {
