--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,8 +20,8 @@
             android:name=".mvp.application.App"
             android:allowBackup="false"
             android:label="@string/app_name"
-            android:icon="@mipmap/ic_launcher"
-            android:roundIcon="@mipmap/ic_launcher_round"
+            android:icon="@mipmap/icon_launcher"
+            android:roundIcon="@mipmap/icon_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme"
             tools:replace="android:allowBackup"
