--- a/app/build.gradle
+++ b/app/build.gradle
@@ -230,6 +230,26 @@ dependencies {
     //国家区号选择器
     implementation project(':library')
     implementation files('libs/libphonenumber-8.9.7.jar')
+
+    // Suas-Android
+    implementation "com.zendesk.suas:suas:1.2.0"
+    implementation "com.zendesk.suas:suas-thunk:1.2.0"
+    implementation "com.zendesk.suas:suas-logger:1.2.0"
+    implementation "com.zendesk.suas:suas-monitor:1.2.0"
+
+    implementation "me.jessyan:retrofit-url-manager:1.4.0"
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.2.1"
+   // implementation "androidx.core:core-ktx:1.2.0-alpha03"
+
+
+    implementation "org.koin:koin-android:2.0.1"
+    implementation "org.koin:koin-android-scope:2.0.1"
+    implementation "org.koin:koin-android-viewmodel:2.0.1"
+
+
+   // implementation 'com.github.wobiancao:sugar:1.0.1.5'
+
 }
 
 //configurations.all {
