--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
                 android:name="com.example.sk_android.mvp.view.activity.register.MainActivity"
                 android:label="@string/app_name"
                 android:windowSoftInputMode="adjustPan"
-                android:theme="@style/AppTheme.ActionBar">
+                android:theme="@style/AppTheme.mainActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
                 <category android:name="android.intent.category.LAUNCHER"/>
