修改初始化数据拉取

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,9 @@ android {
                 outputFileName = "sk.apk"
             }
     }
+    lintOptions {
+        abortOnError false
+    }
 }
 
 androidExtensions {
