--- a/app/build.gradle
+++ b/app/build.gradle
@@ -253,6 +253,11 @@ dependencies {
 
    // implementation 'com.github.wobiancao:sugar:1.0.1.5'
 
+    // 下拉刷新
+    implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0'
+    implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0'
+    //消息总线
+    implementation 'com.jeremyliao:live-event-bus:1.5.0'
 }
 
 //configurations.all {
